--- a/DJ/mysite/templates/includes/navbar.html
+++ b/DJ/mysite/templates/includes/navbar.html
@@ -6,7 +6,7 @@
     </button>
     <div class="container">
         <!-- Begin Logo -->
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="{% url 'blog.index'%}">
         <img src="{% static 'assets/img/logo.png' %}" alt="logo">
         </a>
         <!-- End Logo -->
@@ -14,10 +14,10 @@
             <!-- Begin Menu -->
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                <a class="nav-link" href="index.html">Stories <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{% url 'blog.index'%}">Stories <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="post.html">Post</a>
+                <a class="nav-link" href="{% url 'blog.single' 'test'%}">Post</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="author.html">Author</a>
