--- a/DJ/mysite/backend/templates/backend/includes/sidebar.html
+++ b/DJ/mysite/backend/templates/backend/includes/sidebar.html
@@ -26,7 +26,7 @@
           <span>Author</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'backend.index'%}">
+        <a class="nav-link" href="{% url 'backend.blogs'%}">
           <i class="fas fa-fw fa-tachometer-alt"></i>
           <span>Blogs</span></a>
       </li>
